[gd_scene load_steps=15 format=2]

[ext_resource path="res://ASSETS/enemies/green_down_04.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/enemies/green_walk_01.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://ASSETS/enemies/green_down_02.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/enemies/green_walk_04.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/enemies/green_walk_02.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/enemies/green_down_01.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/enemies/green_walk_03.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/enemies/green_down_03.png" type="Texture" id=10]
[ext_resource path="res://Sounds/monsterHurt.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112, 80 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 112, 80 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "crawl",
"speed": 6.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 1 ) ],
"loop": true,
"name": "flipped",
"speed": 6.0
} ]

[node name="GreenEnemy" type="KinematicBody2D" groups=["enemies"]]
position = Vector2( 0, -64 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 16
collision_mask = 50
script = ExtResource( 4 )
MAX_SPEED = 150
GROUND_FRICTION = 0.15
detects_cliffs = false
is_invulnv = true
no_modulate = true
is_jumpable = false
pickup_type = "greenEnemy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 48 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( -84, 108 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 145

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
self_modulate = Color( 1, 0.4, 0, 1 )
position = Vector2( 0, 48 )
shape = SubResource( 6 )

[node name="ThrowToPickupTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "crawl"
frame = 2
playing = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="PickupArea" to="." method="_on_PickupArea_area_entered"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_PickupArea_body_exited"]
[connection signal="timeout" from="ThrowToPickupTimer" to="." method="_on_ThrowToPickupTimer_timeout"]
